@@ -31,6 +31,7 @@ import com.revenat.javamm.compiler.component.ExpressionOperationBuilder;
 import com.revenat.javamm.compiler.component.ExpressionResolver;
 import com.revenat.javamm.compiler.component.OperationReader;
 import com.revenat.javamm.compiler.component.error.JavammLineSyntaxError;
+import com.revenat.javamm.compiler.component.error.JavammStructSyntaxError;
 import com.revenat.javamm.compiler.test.doubles.OperationDummy;
 
 import java.util.Arrays;
@@ -51,6 +52,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 
+import com.revenat.javamm.compiler.test.helper.CustomAsserts;
 import com.revenat.juinit.addons.ReplaceCamelCase;
 
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
@@ -60,8 +62,8 @@ import com.revenat.juinit.addons.ReplaceCamelCase;
 @MockitoSettings(strictness = Strictness.LENIENT)
 class BlockOperationReaderTest {
     private final static SourceLine STARTING_LINE = new SourceLine("Test", 1, Arrays.asList("start"));
-    private final static SourceLine TEST_LINE = new SourceLine("Test", 2, Arrays.asList("end"));
-    private final ListIterator<SourceLine> COMPILED_CODE = List.of(TEST_LINE).listIterator();
+    private final static SourceLine VALID_LINE = new SourceLine("Test", 2, Arrays.asList("}"));
+    private final static SourceLine INVALID_LINE = new SourceLine("Test", 2, Arrays.asList("invalid"));
 
     private OperationReaderStub operationReaderStub;
 
@@ -82,7 +84,7 @@ class BlockOperationReaderTest {
     @Test
     @Order(1)
     void shouldReadBlockStartingAtSpecifiedSourceLine() {
-        final Block block = blockOperationReader.read(STARTING_LINE, COMPILED_CODE);
+        final Block block = blockOperationReader.read(STARTING_LINE, codeFrom(VALID_LINE));
 
         assertThat(block.getSourceLine(), equalTo(STARTING_LINE));
     }
@@ -92,10 +94,24 @@ class BlockOperationReaderTest {
     void shouldThrowExceptionIfSourceLineCannotBeRead(@Mock final Expression expression) {
         operationReaderStub.setCanRead(false);
         when(expressionResolver.resolve(Mockito.any(), Mockito.any())).thenReturn(expression);
-        when(expressionOperationBuilder.build(expression, TEST_LINE)).thenThrow(new JavammLineSyntaxError("", TEST_LINE));
+        when(expressionOperationBuilder.build(expression, INVALID_LINE)).thenThrow(new JavammLineSyntaxError("", INVALID_LINE));
 
 
-        assertThrows(JavammLineSyntaxError.class, () -> blockOperationReader.read(STARTING_LINE, COMPILED_CODE));
+        assertThrows(JavammLineSyntaxError.class, () -> blockOperationReader.read(STARTING_LINE, codeFrom(INVALID_LINE)));
+    }
+
+    @Test
+    @Order(3)
+    void shouldFailToReadBlockOfCodeIfItDoesNotEndsWithClosingCurlyBrace() {
+        JavammStructSyntaxError e =
+            assertThrows(JavammStructSyntaxError.class,
+                () -> blockOperationReader.read(STARTING_LINE, codeFrom(INVALID_LINE)));
+
+        CustomAsserts.assertErrorMessageContains(e, "'}' expected to close block statement at the end of file");
+    }
+
+    private ListIterator<SourceLine> codeFrom(final SourceLine... lines) {
+        return List.of(lines).listIterator();
     }
 
     private static class OperationReaderStub implements OperationReader {
